Fixed mons nght not scalling right on iOS

--- a/ministries/women/styles/women_styles.css
+++ b/ministries/women/styles/women_styles.css
@@ -90,6 +90,10 @@ h2 {
     margin-bottom: 30px;;
 }
 
+#moms-night {
+    height: 400px;
+}
+
 
 @media only screen and (max-width:800px) {
     .class-selector {
